--- a/apple_health_extractor_shashank's_data.ipynb
+++ b/apple_health_extractor_shashank's_data.ipynb
@@ -1253,26 +1253,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 372,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(-0.1708881555620904,\n",
-       " 26.52875734752071,\n",
-       " 1.7043635391954566,\n",
-       " 0.8656084332223051)"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[227 228 229 230 231 232 233 234 235 236 237]\n",
+      "[227, 228, 229, 230, 231, 232, 233, 234, 235, 236]\n",
+      "[227, 228, 229, 230, 231, 232, 233, 234, 235]\n",
+      "[227, 228, 229, 230, 231, 232, 233, 234, 235]\n"
+     ]
     }
    ],
    "source": [
+    "# Present this to sushant\n",
+    "\n",
     "import scipy.stats\n",
     "def csv_to_pd():\n",
     "    steps_per_day = pd.read_csv('steps_per_day_shashank.csv')\n",
@@ -1282,26 +1281,34 @@
     "def findingDaysfromWeek(week_num,insightDuration,daily_data):\n",
     "    # week start should be a multiple of 7 or 0\n",
     "    # might have to make it week_num - 1 if the year is normal currently leap year so week_num-2\n",
-    "    week_start = 7*(week_num-2)\n",
+    "    if week_num < 100:\n",
+    "        week_start = 7*(week_num-1)\n",
+    "    else:\n",
+    "        week_start = 7*(week_num-2)\n",
     "    return daily_data[week_start:week_start+7*insightDuration]['Steps'], daily_data[week_start:week_start+7*10]['Steps']\n",
-    "\n",
     "# combining this with \n",
     "def setofInsightMonthly(steps_week,threeWeek = False,twoWeek = False):\n",
     "#   THIS FUNCTION FINDS and STORES THE INSIGHTS ON THE BASIS OF A 4WEEK/28DAY PERIOD \n",
     "#   ALSO FINDS ON THE BASIS OF 3 and 2 weeks\n",
     "    steps_week_np = steps_week.to_numpy()\n",
-    "    temp = steps_week_np[len(steps_week_np)-13:len(steps_week_np)-2]\n",
-    "    steps_12week = np.flip(steps_week_np[len(steps_week_np)-13:len(steps_week_np)-2],axis = 0) #flipping the last to the first for easier access to indices \n",
+    "    temp = steps_week_np[len(steps_week_np)-12:len(steps_week_np)-1]\n",
+    "#     steps_12week = np.flip(steps_week_np[len(steps_week_np)-12:len(steps_week_np)],axis = 0) #flipping the last to the first for easier access to indices \n",
+    "    steps_12week = steps_week_np[len(steps_week_np)-12:len(steps_week_np)-1]\n",
     "    weeknum = np.unique([steps_12week[i][0] for i in range(0,len(steps_12week))]) #finding unique week numbers from which insights need to be extracted\n",
-    "    sliding_insight_four_week = {'mean':np.zeros(len(steps_12week) - 4),'stdDev':np.zeros(len(steps_12week) - 4),'weeknum':weeknum} #hardcoded sliding possibilities according to a month\n",
-    "    sliding_insight_three_week = {'mean':np.zeros(len(steps_12week) - 3),'stdDev':np.zeros(len(steps_12week) - 3),'weeknum':weeknum}\n",
-    "    sliding_insight_two_week = {'mean':np.zeros(len(steps_12week) - 2),'stdDev':np.zeros(len(steps_12week) - 2),'weeknum':weeknum}\n",
+    "    print(weeknum)\n",
+    "    sliding_insight_four_week = {'mean':np.zeros(len(steps_12week) - 3),'stdDev':np.zeros(len(steps_12week) - 3),'weeknum':[]} #hardcoded sliding possibilities according to a month\n",
+    "    sliding_insight_three_week = {'mean':np.zeros(len(steps_12week) - 2),'stdDev':np.zeros(len(steps_12week) - 2),'weeknum':[]}\n",
+    "    sliding_insight_two_week = {'mean':np.zeros(len(steps_12week) - 1),'stdDev':np.zeros(len(steps_12week) - 1),'weeknum':[]}\n",
     "#     finding mean of Grouped weekly \n",
-    "    sliding_insight_four_week['mean'] = [np.mean(steps_12week[i:i+4,1]) for i in range(0,len(steps_12week)-4)]\n",
+    "    sliding_insight_four_week['mean'] = [np.mean(steps_12week[i:i+4,1]) for i in range(0,len(steps_12week)-3)]\n",
+    "    sliding_insight_four_week['weeknum'] = [weeknum[i:i+4][0] for i in range(0,len(steps_12week)-3)]\n",
+    "#     print(sliding_insight_four_week['weeknum'])\n",
     "    if threeWeek:\n",
-    "        sliding_insight_three_week['mean'] = [np.mean(steps_12week[i:i+3,1]) for i in range(0,len(steps_12week)-3)]\n",
+    "        sliding_insight_three_week['mean'] = [np.mean(steps_12week[i:i+3,1]) for i in range(0,len(steps_12week)-2)]\n",
+    "        sliding_insight_three_week['weeknum'] = [weeknum[i:i+3][0] for i in range(0,len(steps_12week)-2)]\n",
     "    if twoWeek:\n",
-    "        sliding_insight_two_week['mean'] = [(np.mean(steps_12week[i:i+2,1])) for i in range(0,len(steps_12week)-2)]\n",
+    "        sliding_insight_two_week['mean'] = [(np.mean(steps_12week[i:i+2,1])) for i in range(0,len(steps_12week)-1)]\n",
+    "        sliding_insight_two_week['weeknum'] = [weeknum[i:i+2][0] for i in range(0,len(steps_12week)-1)]\n",
     "    return sliding_insight_four_week,sliding_insight_three_week,sliding_insight_two_week\n",
     "# CAN USE THIS OR STUDENT'S T TEST\n",
     "def tTest(data1,data2,alpha):\n",
@@ -1321,7 +1328,7 @@
     "    # standard error of the difference between the means\n",
     "    num = (mean1 - mean2)\n",
     "    # calculate the t statistic\n",
-    "    t_stat = num/den\n",
+    "    t_stat = abs(num/den)\n",
     "    # degrees of freedom\n",
     "    df = ((s1**2/n1) + (s2**2/n2))**2/((s1**2/n1)**2/(n1-1) + (s2**2/n2)**2/(n2-1))\n",
     "    # calculate the critical value\n",
@@ -1336,12 +1343,53 @@
     "    steps_per_day,steps_per_week = csv_to_pd()\n",
     "#     print(steps_per_day)\n",
     "    dict4week,dict3week,dict2week = setofInsightMonthly(steps_per_week,threeWeek = True,twoWeek = True)\n",
-    "    dailydatanumpy1,dailydata12week = findingDaysfromWeek(dict4week['weeknum'][5],2,steps_per_day)\n",
-    "#     print(dailydatanumpy1)\n",
-    "    dailydatanumpy2,_ = findingDaysfromWeek(dict3week['weeknum'][9],3,steps_per_day)\n",
+    "#     print(dict4week['weeknum'])\n",
+    "    weekconsidered = 233\n",
+    "    insight2week,meandiff2week = weekInsight(weekconsidered,steps_per_day,dict2week,2)\n",
+    "    insight3week,meandiff3week = weekInsight(weekconsidered,steps_per_day,dict3week,3)\n",
+    "    insight4week,meandiff4week = weekInsight(weekconsidered,steps_per_day,dict3week,4)\n",
+    "#     print(meandiff2week)\n",
+    "#     print(meandiff3week)\n",
+    "#     print(meandiff4week)\n",
+    "def weekInsight(weekconsidered,steps_per_day,WeekgroupedData,groupSize):\n",
+    "    dailydatanumpy1,dailydata12week = findingDaysfromWeek(weekconsidered,groupSize,steps_per_day)\n",
+    "    a = np.array(WeekgroupedData['weeknum'])\n",
+    "    weekIndexGrouped = list(np.where(a == weekconsidered))\n",
+    "    weekIndex = int(weekIndexGrouped[0])\n",
+    "    print(WeekgroupedData['weeknum'])\n",
+    "    insight = []\n",
+    "    meandiff = []\n",
+    "    for i in range(0,len(WeekgroupedData['weeknum'])):\n",
+    "        dailydatanumpy2,_ = findingDaysfromWeek(WeekgroupedData['weeknum'][i],groupSize,steps_per_day)\n",
+    "        t_stat,_,_,p =  tTest(dailydatanumpy1,dailydatanumpy2,0.05)\n",
+    "        if t_stat > p and WeekgroupedData['weeknum'][i] > weekIndex:\n",
+    "            insight.append(WeekgroupedData['weeknum'][i])\n",
+    "            meandiff.append(WeekgroupedData['mean'][weekIndex] - WeekgroupedData['mean'][i])\n",
     "    # two 4 week insight comparison\n",
-    "    return tTest(dailydatanumpy1,dailydatanumpy2,0.05)\n",
+    "    return insight,meandiff\n",
     "gettingInsights()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-343-b552b52ba88d>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-343-b552b52ba88d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [227 228 229 230 231 232 233 234 235 236 237]\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dont look at this\n",
+    "[227 228 229 230 231 232 233 234 235 236 237]\n",
+    "[236, 235, 234, 233, 232, 231, 230, 229, 228]\n",
+    "[235, 234, 233, 232, 231, 230, 229, 228]\n",
+    "[235, 234, 233, 232, 231, 230, 229, 228]"
    ]
   },
   {
@@ -1353,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1419,7 @@
        "9073"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1441,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1582,7 @@
        "9072  2020-07-06 00:00:00 +0530  HKCategoryValueAppleStandHourStood  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1603,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m~/Desktop/CodesTemp/CVPR/DroneRacingData/apple_health_export/qs_ledger/apple_health/apple-health-data-parser.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'endDate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'endDate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m19\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%Y%m%d%H%M%S'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m#     t1 = datetime.time(*map(int, stand['endDate'][i][12:19].split(':')))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#     t2 = datetime.time(*map(int, stand['startDate'][i][12:19].split(':')))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-183-cfcb47e218d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'endDate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'endDate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m19\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%Y%m%d%H%M%S'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m#     t1 = datetime.time(*map(int, stand['endDate'][i][12:19].split(':')))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#     t2 = datetime.time(*map(int, stand['startDate'][i][12:19].split(':')))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/_strptime.py\u001b[0m in \u001b[0;36m_strptime_datetime\u001b[0;34m(cls, data_string, format)\u001b[0m\n\u001b[1;32m    563\u001b[0m     \"\"\"Return a class cls instance based on the input string and the\n\u001b[1;32m    564\u001b[0m     format string.\"\"\"\n\u001b[0;32m--> 565\u001b[0;31m     \u001b[0mtt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfraction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_strptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_string\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    566\u001b[0m     \u001b[0mtzname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgmtoff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    567\u001b[0m     \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfraction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/_strptime.py\u001b[0m in \u001b[0;36m_strptime\u001b[0;34m(data_string, format)\u001b[0m\n\u001b[1;32m    360\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mfound\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    361\u001b[0m         raise ValueError(\"time data %r does not match format %r\" %\n\u001b[0;32m--> 362\u001b[0;31m                          (data_string, format))\n\u001b[0m\u001b[1;32m    363\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_string\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mfound\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m         raise ValueError(\"unconverted data remains: %s\" %\n",
       "\u001b[0;31mValueError\u001b[0m: time data '2017-11-18 02:30:00' does not match format '%Y%m%d%H%M%S'"
