--- a/apple_health_extractor_shashank's_data.ipynb
+++ b/apple_health_extractor_shashank's_data.ipynb
@@ -1253,9 +1253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 447,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1263,9 +1263,12 @@
      "output_type": "stream",
      "text": [
       "[227 228 229 230 231 232 233 234 235 236 237]\n",
-      "[227, 228, 229, 230, 231, 232, 233, 234, 235, 236]\n",
-      "[227, 228, 229, 230, 231, 232, 233, 234, 235]\n",
-      "[227, 228, 229, 230, 231, 232, 233, 234, 235]\n"
+      "[25049.5, 39059.5, 42245.5, 36010.5, 23855.5]\n",
+      "[26616.666666666657, 33676.33333333334, 33924.0, 23540.333333333343]\n",
+      "[12766.25, 16653.75, 12169.25, 8603.5]\n",
+      "Please keep walking, your performance went down from week 230 to 231 by 591437.0 steps\n",
+      "Please keep walking your performance went down from week 230 to 232 by 712404.0 steps\n",
+      "Please keep walking, your performance went down from week 229 to 232 by 466305.0 steps\n"
      ]
     }
    ],
@@ -1310,6 +1313,7 @@
     "        sliding_insight_two_week['mean'] = [(np.mean(steps_12week[i:i+2,1])) for i in range(0,len(steps_12week)-1)]\n",
     "        sliding_insight_two_week['weeknum'] = [weeknum[i:i+2][0] for i in range(0,len(steps_12week)-1)]\n",
     "    return sliding_insight_four_week,sliding_insight_three_week,sliding_insight_two_week\n",
+    "\n",
     "# CAN USE THIS OR STUDENT'S T TEST\n",
     "def tTest(data1,data2,alpha):\n",
     "    # calculate means\n",
@@ -1347,26 +1351,67 @@
     "    weekconsidered = 233\n",
     "    insight2week,meandiff2week = weekInsight(weekconsidered,steps_per_day,dict2week,2)\n",
     "    insight3week,meandiff3week = weekInsight(weekconsidered,steps_per_day,dict3week,3)\n",
-    "    insight4week,meandiff4week = weekInsight(weekconsidered,steps_per_day,dict3week,4)\n",
-    "#     print(meandiff2week)\n",
-    "#     print(meandiff3week)\n",
-    "#     print(meandiff4week)\n",
+    "    insight4week,meandiff4week = weekInsight(weekconsidered,steps_per_day,dict4week,4)\n",
+    "#     { CODE SNIPPET TO SAVE MONTHLY DATA INTO A CSV FILE\n",
+    "#     array1 = np.transpose(np.array([dict2week['weeknum'],dict2week['mean']]))\n",
+    "#     array2 = np.transpose(np.array([dict3week['weeknum'],dict3week['mean']]))\n",
+    "#     array3 = np.transpose(np.array([dict4week['weeknum'],dict4week['mean']]))\n",
+    "#     print(array1)\n",
+    "    \n",
+    "#     np.savetxt(\"meandiff_grouped_2week.csv\", array1, delimiter=\",\")\n",
+    "#     np.savetxt(\"meandiff_grouped_3week.csv\", array2, delimiter=\",\")\n",
+    "#     np.savetxt(\"meandiff_grouped_4week.csv\", array3, delimiter=\",\")\n",
+    "#     }\n",
+    "    weekNo2week,maxdiff2week = printGroupedInsightsHelper(insight2week,meandiff2week)\n",
+    "    weekNo3week,maxdiff3week = printGroupedInsightsHelper(insight3week,meandiff3week)\n",
+    "    weekNo4week,maxdiff4week = printGroupedInsightsHelper(insight4week,meandiff4week)\n",
+    "    if printGroupInsight(weekNo2week,meandiff2week,insight2week):\n",
+    "        print('Great job! your steps have increased from week '+str(weekNo2week)+' to '+str(weekNo2week+1)+' by '+str(round(maxdiff2week*14))+' steps')\n",
+    "    else:\n",
+    "        print('Please keep walking, your performance went down from week '+str(weekNo2week)+' to '+str(weekNo2week+1)+' by '+str(round(maxdiff2week*14))+' steps')\n",
+    "    if printGroupInsight(weekNo3week,meandiff3week,insight3week):\n",
+    "        print('Great job! your steps have increased from week '+str(weekNo3week)+' to '+str(weekNo3week+2)+' by '+str(round(maxdiff3week*21))+' steps')\n",
+    "    else:\n",
+    "        print('Please keep walking your performance went down from week '+str(weekNo3week)+' to '+str(weekNo3week+2)+' by '+str(round(maxdiff3week*21))+' steps')\n",
+    "\n",
+    "    if printGroupInsight(weekNo4week,meandiff4week,insight4week):\n",
+    "        print('Great job! your steps have increased from week '+str(weekNo4week)+' to '+str(weekNo4week+3)+' by '+str(round(maxdiff4week*28))+' steps')\n",
+    "    else:\n",
+    "        print('Please keep walking, your performance went down from week '+str(weekNo4week)+' to '+str(weekNo4week+3)+' by '+str(round(maxdiff4week*28))+' steps')\n",
+    "\n",
     "def weekInsight(weekconsidered,steps_per_day,WeekgroupedData,groupSize):\n",
     "    dailydatanumpy1,dailydata12week = findingDaysfromWeek(weekconsidered,groupSize,steps_per_day)\n",
     "    a = np.array(WeekgroupedData['weeknum'])\n",
     "    weekIndexGrouped = list(np.where(a == weekconsidered))\n",
+    "#     print(weekIndexGrouped[0])\n",
+    "#     print(WeekgroupedData['weeknum'])\n",
+    "    if len(weekIndexGrouped[0]) == 0:\n",
+    "        insight = []\n",
+    "        meandiff = []\n",
+    "        return insight,meandiff\n",
     "    weekIndex = int(weekIndexGrouped[0])\n",
-    "    print(WeekgroupedData['weeknum'])\n",
     "    insight = []\n",
     "    meandiff = []\n",
     "    for i in range(0,len(WeekgroupedData['weeknum'])):\n",
     "        dailydatanumpy2,_ = findingDaysfromWeek(WeekgroupedData['weeknum'][i],groupSize,steps_per_day)\n",
     "        t_stat,_,_,p =  tTest(dailydatanumpy1,dailydatanumpy2,0.05)\n",
-    "        if t_stat > p and WeekgroupedData['weeknum'][i] > weekIndex:\n",
+    "        if t_stat > p and weekIndex > i:\n",
     "            insight.append(WeekgroupedData['weeknum'][i])\n",
     "            meandiff.append(WeekgroupedData['mean'][weekIndex] - WeekgroupedData['mean'][i])\n",
     "    # two 4 week insight comparison\n",
     "    return insight,meandiff\n",
+    "def printGroupedInsightsHelper(insight,meandiff):\n",
+    "    meandiffabs = [abs(number) for number in meandiff]\n",
+    "    print(meandiffabs)\n",
+    "    maxdiff = np.amax(meandiffabs)\n",
+    "    index = np.where(meandiffabs == maxdiff)\n",
+    "    return insight[int(index[0])],meandiffabs[int(index[0])]\n",
+    "def printGroupInsight(insightweek,meandiff,weeknum):\n",
+    "    indexInsight = np.where(weeknum == insightweek)\n",
+    "    if meandiff[int(indexInsight[0])] > 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "gettingInsights()"
    ]
   },
